# django-nginx-gunicorn-deploy-using-docker-for-aws

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/config/: settings.py
