[tool.poetry]
name = "django-nginx-gunicorn-deploy-using-docker-for-aws"
version = "0.1.0"
description = ""
authors = ["Andreas Cormack <cormackandy@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
decouple = "^0.0.7"
gunicorn = "^22.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
